--- a/crates/predictor/Cargo.toml
+++ b/crates/predictor/Cargo.toml
@@ -7,5 +7,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 helix = "0.6.0"
+
 chrono = "0.3"
+
 lazy_static = "0.2"
+
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
