--- a/crates/predictor/Cargo.toml
+++ b/crates/predictor/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "predictor"
 version = "0.1.0"
+build = "build.rs"
 
 [lib]
 crate-type = ["cdylib"]
@@ -17,3 +18,6 @@ serde_derive = "1.0"
 serde_json = "1.0"
 
 libc = "0.2.0"
+
+[build-dependencies.gcc]
+git = "https://github.com/alexcrichton/gcc-rs"
