Made it use puma directly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,6 @@ services:
   app:
     build: .
     ports:
-      - "5000:80"
+      - "5000:3000"
+    environment:
+      - secret_key_base=8f68f50c814a8707bfc160c53129dfb232c7d281a4db6fc00612db7a89679a4ab72c05812eabdebeb4a1f64383ddef78b2ddb12a47b443a002ff8865c33a30fb
