--- a/crates/predictor/Cargo.toml
+++ b/crates/predictor/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib"]
 [dependencies]
 helix = "0.6.1"
 
-chrono = "0.3"
+chrono = { version = "0.4", features = ["serde"] }
 
 lazy_static = "0.2"
 
