--- a/crates/predictor/Cargo.toml
+++ b/crates/predictor/Cargo.toml
@@ -6,9 +6,8 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-helix = "0.6.1"
-
-chrono = { version = "0.4", features = ["serde"] }
+helix = "0.6.4"
+chrono = "0.4"
 
 lazy_static = "0.2"
 
@@ -18,6 +17,6 @@ serde_json = "1.0"
 
 lru-cache = "~0.1"
 
-rand="0.3.0"
+rand = "0.3.0"
 
 libc = "0.2.22"
